[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UnitHUD.gd" type="Script" id=1]
[ext_resource path="res://src/EffectGridItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/FriendlyStyleBox.tres" type="StyleBox" id=3]
[ext_resource path="res://src/HostileStyleBox.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.0862745 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.956863, 0.921569, 0.0313726, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.0862745 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0313726, 0.847059, 0.956863, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.0862745 )

[node name="UnitHUD" type="Control"]
margin_right = -198.136
margin_bottom = -191.4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
effects_grid_item = ExtResource( 2 )
hostile_health_bar_style = ExtResource( 4 )
friendly_health_bar_style = ExtResource( 3 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_right = 300.0
margin_bottom = 40.0
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HealthBar"]
margin_right = 300.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerBar" type="ProgressBar" parent="."]
margin_top = 40.0
margin_right = 300.0
margin_bottom = 60.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CastBar" type="ProgressBar" parent="."]
visible = false
margin_top = 70.0
margin_right = 300.0
margin_bottom = 100.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CastBar"]
margin_right = 300.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsGrid" type="GridContainer" parent="."]
margin_left = 305.0
margin_right = 405.0
margin_bottom = 100.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}
